# patina-child-slate

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  child.toml
.github/workflows/: ci.yml  pr-main.yml  release.yml
.patina/: config.toml  uid  versions.json
layer/core/: adapter-pattern.md  dependable-rust.md  oxidized-knowledge.md  safety-boundaries.md  session-capture.md  spec-driven-design.md  unix-philosophy.md
layer/sessions/: 20260428-200833-705990000.md  20260429-000832-init.md  20260512-170906-759051000.md  20260512-210904-init.md
layer/slate/: events.jsonl
layer/slate/work/slate-ci-versioning-baseline/: work.toml
layer/slate/work/slate-editing-ops/: work.toml
layer/slate/work/slate-generic-release-contract/: work.toml
layer/slate/work/slate-lifecycle-activation-ux/: work.toml
layer/slate/work/slate-release-units-contract/: work.toml
layer/slate/work/slate-surface-schema/: work.toml
layer/surface/: slate-manager-work-commit-list.md
scripts/: ci-tier0.sh
skills/: README.md
skills/slate-code/: SKILL.md
skills/slate-version-control/: SKILL.md
src/: lib.rs
wit/: world.wit
wit-contract/: slate.wit
